--- a/latex/concept.tex
+++ b/latex/concept.tex
@@ -17,9 +17,9 @@ In the following I'll state the server requirements and the technology that were
 % \subsection(Requirements)
 
 % TODO: requirements?
-% The 
+% The
 % \begin{itemize}
-%   \item 
+%   \item
 % \end{itemize}
 
 \subsubsection{Node.js}
@@ -376,7 +376,7 @@ react's implementation in any way:
   </li>
 </ol>
   \end{minted}
-  \caption{Virtual DOM with newly created \textt{li} node.}
+  \caption{Virtual DOM with newly created \texttt{li} node.}
   \label{newvirtdom}
 \end{listing}
 
