--- a/latex/implementation.tex
+++ b/latex/implementation.tex
@@ -55,7 +55,7 @@ for starting the the application. And this entry-point
 needs to be called after all scripts, that are referenced in the \gls{HTML}
 document, have been downloaded from the server. Angular accomplishes this by
 subscribing to the \texttt{DOMContentLoaded} event. Angular will then look for
-\gls{DOM} elements with an \textt{ng-app} attribute. That attribute is set by the
+\gls{DOM} elements with an \texttt{ng-app} attribute. That attribute is set by the
 developer and tells angular, that the corresponding DOM element is supposed to
 contain an application and the application's name. The bootstrapping process is
 described in Figure~\ref{fig:angularbootstrap}.
